--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,21 +1,26 @@
 ---
 
 - name: Update apt-get repo and cache
+  become: true
   apt:
     update_cache: yes
 
 - name: Add Docker's official GPG key
+  become: true
   shell:
     cmd: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 
 - name: Add Docker PPA repository
+  become: true
   shell: add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
 
 - name: Update apt-get repo and cache
+  become: true
   apt:
     update_cache: yes
 
 - name: Install docker packages
+  become: true
   apt:
     name: "{{ base_docker_packages }}"
     state: present
